# ChatbotWithDocker

./: .gitignore
Langchain1/: APItosend.py  Chatbot.py  ChatbotGemin.py  README.md  pyproject.toml  stockAnalysis.py  stockdataCollection.py
Langchain1/static/: style.css
Langchain1/templates/: index.html  stock_analysis.html
