[tool.poetry]
name = "langchain1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.2"
langchain-core = "^0.3.9"
yfinance = "^0.2.44"
matplotlib = "^3.9.2"
langchain = "^0.3.3"
langchain-community = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
