[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Sayan Sarkar <60515377+Sayan-sarkar007@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.2"
langchain-core = "^0.3.9"
yfinance = "^0.2.44"
matplotlib = "^3.9.2"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
flask = "^3.1.0"
nsetools = "^1.0.11"
yahoo-fin = "^0.8.9.1"
waitress = "^3.0.2"
requests-html = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
